--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
-	url = https://github.com/GGP1/blog/themes/PaperMod.git
+	url = https://github.com/GGP1/hugo-PaperMod.git
