--- a/config.yml
+++ b/config.yml
@@ -48,7 +48,7 @@ params:
 
     label:
         text: ""
-        icon: /apple-touch-icon.png
+        icon: /blog/apple-touch-icon.png
         iconHeight: 38
 
     # profile-mode
@@ -56,7 +56,7 @@ params:
         enabled: false # needs to be explicitly set
         title: Gastón Palomeque
         subtitle: Software developer
-        imageUrl: "/images/panther.jpg"
+        imageUrl: ""
         imageWidth: 120
         imageHeight: 120
         imageTitle: logo
