--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ content/posts/*
 static/cv/notes.md
 static/cv
 
-# Articles published
+# Published articles
 !content/posts/cryptoeconomics.md
+!content/posts/protect_your_information.md
