Publish "Applications containerization"

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ static/cv
 # Published articles
 !content/posts/cryptoeconomics.md
 !content/posts/protect_your_information.md
+!content/posts/applications_containerization.md
