Publish "React Native generic list"

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ static/cv
 !content/posts/cryptoeconomics.md
 !content/posts/protect_your_information.md
 !content/posts/applications_containerization.md
+!content/posts/rn_generic_list.md
