--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ static/cv
 !content/posts/protect_your_information.md
 !content/posts/applications_containerization.md
 !content/posts/rn_generic_list.md
+!content/posts/mastering_sql_with_go_p1.md
