--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ enableRobotsTXT: true
 
 markup:
   highlight:
-    style: github
+    style: onedark
   goldmark:
     renderer:
       unsafe: true
