Publish "Delving into Wazuh's server performance enhancements"

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ domainDNSConfig.JPG
 !content/posts/rn_generic_list.md
 !content/posts/mastering_sql_with_go_p1.md
 !content/posts/mastering_sql_with_go_p2.md
+!content/posts/wazuh_performance_enhancements.md
